Configurando a API do Aplha Vantage e fazendo lógica para chama-la o máximo de vezes por dia (com chave da API gratuita)

--- a/Properties/launchSettings.json
+++ b/Properties/launchSettings.json
@@ -2,7 +2,7 @@
   "profiles": {
     "ps-inoa": {
       "commandName": "Project",
-      "commandLineArgs": "ATIVO STOCK STOCK\r\n"
+      "commandLineArgs": "PETR4.SA 22,67 22,59 \r\n"
     }
   }
 }
